test/should_pass/dangle_001.grg
actions dangle_001 using attrib_model_001;

rule r {
	pattern{
		<-- :Node;
		--> :Node;
		:Node <--;
		:Node -->;
		<-- :Node -->;
		<-- :Node <--;
		--> :Node -->;
		--> :Node <--;
		--> :Node <-- :Node <--;
		-->;
	}

	modify {
	}
}


