test/should_fail/unary_001.grg
actions unary_001 using attrib_model_001;

rule r {
	pattern {
		ni: NINT;
	}
	modify {
		eval {
			ni.a = -- ni.a;
		}
	}
}
